# ml-dl-cnn-practice

./: README.md  demo.ipynb  pyproject.toml
data-science/buyers-time-pred/: buyers_time_pred.ipynb  req.txt
llm_playground/: simple_llm_qa.py
market-predictions/: sp_500_predication.ipynb
