[tool.poetry]
name = "ml-dl-cnn-practice"
version = "0.1.0"
description = "Practice ml, dl, cnn and ai technologies"
authors = ["Ashraful Fuad <fuadashraful16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
